Added OnAction Parameter for *,/,+,-,=

--- a/default_JavaFX/src/main/resources/com/example/default_javafx/hello-view.fxml
+++ b/default_JavaFX/src/main/resources/com/example/default_javafx/hello-view.fxml
@@ -58,7 +58,7 @@
                 <Font size="20.0"/>
             </font>
         </Button>
-        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="80.0" text="/">
+        <Button mnemonicParsing="false" onAction="#divideAction" prefHeight="40.0" prefWidth="80.0" text="/">
             <font>
                 <Font size="20.0"/>
             </font>
@@ -80,7 +80,7 @@
                 <Font size="20.0" />
             </font>
         </Button>
-        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="80.0" text="*">
+        <Button mnemonicParsing="false" onAction="#multiplicationAction" prefHeight="40.0" prefWidth="80.0" text="*">
             <font>
                 <Font size="20.0" />
             </font>
@@ -102,7 +102,7 @@
                 <Font size="20.0" />
             </font>
         </Button>
-        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="80.0" text="-">
+        <Button mnemonicParsing="false" onAction="#minusAction" prefHeight="40.0" prefWidth="80.0" text="-">
             <font>
                 <Font size="20.0" />
             </font>
@@ -124,7 +124,7 @@
                 <Font size="20.0" />
             </font>
         </Button>
-        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="80.0" text="+">
+        <Button mnemonicParsing="false" onAction="#addAction" prefHeight="40.0" prefWidth="80.0" text="+">
             <font>
                 <Font size="20.0" />
             </font>
@@ -146,7 +146,7 @@
                 <Font size="20.0" />
             </font>
         </Button>
-        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="80.0" text="=">
+        <Button mnemonicParsing="false" onAction="#calculate" prefHeight="40.0" prefWidth="80.0" text="=">
             <font>
                 <Font size="20.0" />
             </font>
