Added onAction Parameter cleartextfield

--- a/default_JavaFX/src/main/resources/com/example/default_javafx/hello-view.fxml
+++ b/default_JavaFX/src/main/resources/com/example/default_javafx/hello-view.fxml
@@ -24,12 +24,12 @@
                 <Font size="20.0" />
             </font>
         </Button>
-        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="80.0" text="CE">
+        <Button mnemonicParsing="false" onAction="#clearTextField" prefHeight="40.0" prefWidth="80.0" text="CE">
             <font>
                 <Font size="20.0" />
             </font>
         </Button>
-        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="80.0" text="C">
+        <Button mnemonicParsing="false" onAction="#clearTextField" prefHeight="40.0" prefWidth="80.0" text="C">
             <font>
                 <Font size="20.0" />
             </font>
